Fin Etapa Branching y Versiones 2.0 de paginas, Comienzo Etapa 3.0,  de Mejoras y Optimizacion (ViteMinify y PurgeCSS para comenzar)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "glob": "^13.0.0",
     "less": "^4.4.2",
     "vite": "^7.2.4",
-    "vite-plugin-handlebars": "^2.0.0"
+    "vite-plugin-handlebars": "^2.0.0",
+    "vite-plugin-minify": "^2.1.0",
+    "vite-plugin-purgecss": "^0.2.13"
   }
 }
