--- a/.github/workflows/deploy_to_base.yml
+++ b/.github/workflows/deploy_to_base.yml
@@ -3,7 +3,7 @@ name: VITE Deploy to GitHub Pages
 on:
     push:
         branches:
-            - main
+            - master
 
     workflow_dispatch:
 permissions:
